# Qt6-QML

./: README.md
01- The Fundamentals/01 - QML Syntax/01 - Syntax Demo/: CMakeLists.txt  Main.qml
01- The Fundamentals/01 - QML Syntax/03 - Qt Global Object/: Main.qml  Readme.md  main.cpp
01- The Fundamentals/01 - QML Syntax/04 - Property Change Handler/: Main.qml
01- The Fundamentals/02 - Basic Elements/02 - Image/: CMakeLists.txt  main.cpp  resources.qrc
01- The Fundamentals/03 - Custom Components/01 - Custom Components/: Readme.md  main.cpp
01- The Fundamentals/03 - Custom Components/02 - Custom Components in Place/: Main.qml  Readme.md  main.cpp
01- The Fundamentals/03 - Custom Components/03 - QML Modules/: CMakeLists.txt  Main.qml  Readme.md  main.cpp
1- The Fundamentals/1 - QML Syntax/2 - Property Binding/: Main.qml  Readme.md
1- The Fundamentals/1 - QML Syntax/3 - Qt Global Object/: CMakeLists.txt
1- The Fundamentals/1 - Syntax Demo/: Readme.md  main.cpp
1- The Fundamentals/2 - Basic Elements/2 - Image/: Main.qml  Readme.md
1- The Fundamentals/2 - Property Binding/: CMakeLists.txt  Readme.md  main.cpp
1- The Fundamentals/3 - Custom Components/2 - Custom Components in Place/: CMakeLists.txt  Readme.md
1- The Fundamentals/3 - Qt Global Object/: Readme.md
1- The Fundamentals/4 - Property Change Handler/: CMakeLists.txt  Readme.md  main.cpp
1- The Fundamentals/5 - Rectangle Item Image/: Main.qml  main.cpp
1- The Fundamentals/5 - Rectangle Item Text/: CMakeLists.txt  Readme.md
(+4 files in other folders)
